tests/reference/asr-iostat_constant_integer-4f6f5d4.stderr
semantic error: Non-variable expression for `iostat`
 --> tests/errors/iostat_constant_integer.f90:8:5
  |
8 |     read(u, *, iostat=ios)
  |     ^^^^^^^^^^^^^^^^^^^^^^ 
